<resources>
    <string name="app_name">SensorListener</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="x_label">X:</string>
    <string name="y_label">Y:</string>
    <string name="z_label">Z:</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="z_label2">Z:</string>
    <string name="y_label2">Y:</string>
    <string name="x_label2">X:</string>
</resources>
